Added/Modified argo-hub.ci-simple.0.0.1.workflow-template.yaml

--- a/argo-hub.ci-simple.0.0.1.workflow-template.yaml
+++ b/argo-hub.ci-simple.0.0.1.workflow-template.yaml
@@ -110,8 +110,11 @@ spec:
       inputs:
         parameters:
         - name: github-repo
+          value: '{{inputs.parameters.github-repo}}'
         - name: manifest-path
+          value: '{{inputs.parameters.manifest-path}}'
         - name: new-image-tag
+          value: '{{ inputs.parameters.IMAGE_TAG }}'
       container:
         image: alpine/git
         command: [sh]
