Added/Modified argo-hub.ci-simple.0.0.1.workflow-template.yaml

--- a/argo-hub.ci-simple.0.0.1.workflow-template.yaml
+++ b/argo-hub.ci-simple.0.0.1.workflow-template.yaml
@@ -94,9 +94,9 @@ spec:
       inputs:
         parameters:
         - name: github-repo
-          value: '{{inputs.parameters.github-repo}}'
+          value: '{{inputs.parameters.GITHUB_REPO}}'
         - name: manifest-path
-          value: '{{inputs.parameters.manifest-path}}'
+          value: '{{inputs.parameters.MANIFEST_PATH}}'
         - name: new-image-tag
           value: '{{ inputs.parameters.IMAGE_TAG }}'
       container:
