--- a/argo-hub.ci-simple.0.0.1.workflow-template.yaml
+++ b/argo-hub.ci-simple.0.0.1.workflow-template.yaml
@@ -23,27 +23,23 @@ spec:
         secretName: '{{ inputs.parameters.DOCKER_CONFIG_SECRET }}'
   entrypoint: ci-tasks
   templates:
-    #update K8s manifest
     - name: update-image
       inputs:
         parameters:
-        - name: github-repo
-          value: '{{inputs.parameters.GITHUB_REPO}}'
-        - name: manifest-path
-          value: '{{inputs.parameters.MANIFEST_PATH}}'
+        - name: GITHUB_REPO
+        - name: MANIFEST_PATH
         - name: new-image-tag
-          value: '{{ inputs.parameters.IMAGE_TAG }}'
       script:
         name: step
         image: alpine/git
         command: [sh]
         source: |
-          git clone https://github.com/{{inputs.parameters.github-repo}} /workspace/repo
+          git clone https://github.com/{{ inputs.parameters.GITHUB_REPO }} /workspace/repo
           cd /workspace/repo
           git checkout -b update-image
-          sed -i "s/image:.*\$/image: your-container-image:{{inputs.parameters.new-image-tag}}/" {{inputs.parameters.manifest-path}}
+          sed -i "s/image:.*\$/image: your-container-image:{{ inputs.parameters.IMAGE_TAG }}/" {{ inputs.parameters.MANIFEST_PATH }}
           git add .
-          git commit -m "Update container image tag to {{inputs.parameters.new-image-tag}}"
+          git commit -m "Update container image tag to {{ inputs.parameters.IMAGE_TAG }}"
           git push origin update-image
     - name: ci-tasks
       metadata:
