--- a/argo-hub.ci-simple.0.0.1.workflow-template.yaml
+++ b/argo-hub.ci-simple.0.0.1.workflow-template.yaml
@@ -97,15 +97,17 @@ spec:
         - name: GITHUB_REPO
         - name: MANIFEST_PATH
         - name: IMAGE_TAG
-      script:
-        name: step
-        image: alpine/git
-        command: [sh]
-        source: |
-          git clone https://github.com/{{ inputs.parameters.GITHUB_REPO }} /workspace/repo
-          cd /workspace/repo
-          git checkout -b update-image
-          sed -i "s/image:.*\$/image: your-container-image:{{ inputs.parameters.IMAGE_TAG }}/" {{ inputs.parameters.MANIFEST_PATH }}
-          git add .
-          git commit -m "Update container image tag to {{ inputs.parameters.IMAGE_TAG }}"
-          git push origin update-image
+      dag:
+        tasks:
+          - name: update-manifest
+            templateRef:
+              name: update-image
+              template: build
+            arguments:
+                parameters:
+                - name: GITHUB_REPO
+                  value: '{{ inputs.parameters.GITHUB_REPO }}'
+                - name: MANIFEST_PATH
+                  value: '{{ inputs.parameters.MANIFEST_PATH }}'
+                - name: IMAGE_TAG
+                  value: '{{ inputs.parameters.IMAGE_TAG }}'
