--- a/argo-hub.ci-simple.0.0.1.workflow-template.yaml
+++ b/argo-hub.ci-simple.0.0.1.workflow-template.yaml
@@ -100,7 +100,7 @@ spec:
           - name: update-manifest
             templateRef:
               name: update-image
-              template: build
+              template: update-image
             arguments:
                 parameters:
                 - name: GITHUB_REPO
