--- a/update-image.yaml
+++ b/update-image.yaml
@@ -17,6 +17,10 @@ spec:
                 name: '{{ inputs.parameters.GIT_TOKEN_SECRET }}'
                 key: token
         parameters:
+          - name: REPO
+          - name: REVISION
+            default: 'master'
+          - name: GIT_TOKEN_SECRET
           - name: GITHUB_REPO
           - name: MANIFEST_PATH
           - name: IMAGE_TAG
