--- a/update-image.yaml
+++ b/update-image.yaml
@@ -24,6 +24,8 @@ spec:
           - name: GITHUB_REPO
           - name: MANIFEST_PATH
           - name: IMAGE_TAG
+          - name: USER
+          - name: EMAIL
       script:
         image: alpine/git
         workingDir: '{{ inputs.artifacts.repo.path }}'
@@ -31,8 +33,10 @@ spec:
         source: |
           git clone https://{{ inputs.parameters.GIT_TOKEN_SECRET.name }}:{{ inputs.parameters.GIT_TOKEN_SECRET.key }}@github.com/{{ inputs.parameters.GITHUB_REPO }} /workspace/repo
           cd /workspace/repo
-          git checkout -b update-image
+          git checkout -b {{ inputs.parameters.REVISION }}
           sed -i "s/image:.*\$/image: your-container-image:{{ inputs.parameters.IMAGE_TAG }}/" {{ inputs.parameters.MANIFEST_PATH }}
+          git config user.name {{ inputs.parameters.USER }}
+          git config user.email {{ inputs.parameters.EMAIL }}
           git add .
           git commit -m "Update container image tag to {{ inputs.parameters.IMAGE_TAG }}"
-          git push origin update-image
+          git push origin {{ inputs.parameters.REVISION }}
