Added/Modified sensor-cf-ci.sensor.yaml

--- a/sensor-cf-ci.sensor.yaml
+++ b/sensor-cf-ci.sensor.yaml
@@ -70,11 +70,11 @@ spec:
             - dest: spec.arguments.parameters.0.value
               src:
                 dependencyName: github-f50d76a9-c450-466d-8d63-984c95bae7f2
-                dataTemplate: maryia-brauer
+                dataTemplate: maryiaCodefresh
             - dest: spec.arguments.parameters.1.value
               src:
                 dependencyName: github-f50d76a9-c450-466d-8d63-984c95bae7f2
-                dataTemplate: maryia.brauer@va.lv
+                dataTemplate: maryia.brauer@codefresh.io
             - dest: spec.arguments.parameters.2.value
               src:
                 dependencyName: github-f50d76a9-c450-466d-8d63-984c95bae7f2
