Added/Modified update-image.yaml

--- a/update-image.yaml
+++ b/update-image.yaml
@@ -19,7 +19,6 @@ spec:
         parameters:
           - name: REPO
           - name: REVISION
-            default: 'master'
           - name: GIT_TOKEN_SECRET
           - name: GITHUB_REPO
           - name: MANIFEST_PATH
@@ -31,12 +30,12 @@ spec:
         workingDir: '{{ inputs.artifacts.repo.path }}'
         command: [sh]
         source: |
-          git clone https://{{ inputs.parameters.GIT_TOKEN_SECRET.name }}:{{ inputs.parameters.GIT_TOKEN_SECRET.key }}@github.com/{{ inputs.parameters.GITHUB_REPO }} /workspace/repo
+          git clone https://{{ inputs.parameters.USER }}:{{ inputs.parameters.GIT_TOKEN_SECRET }}@github.com/{{ inputs.parameters.GITHUB_REPO }} /workspace/repo
           cd /workspace/repo
-          git checkout -b {{ inputs.parameters.REVISION }}
+          git checkout -b master
           sed -i "s/image:.*\$/image: your-container-image:{{ inputs.parameters.IMAGE_TAG }}/" {{ inputs.parameters.MANIFEST_PATH }}
           git config user.name {{ inputs.parameters.USER }}
           git config user.email {{ inputs.parameters.EMAIL }}
           git add .
           git commit -m "Update container image tag to {{ inputs.parameters.IMAGE_TAG }}"
-          git push origin {{ inputs.parameters.REVISION }}
+          git push origin master
