--- a/update-image.yaml
+++ b/update-image.yaml
@@ -28,14 +28,13 @@ spec:
       script:
         image: alpine/git
         workingDir: '{{ inputs.artifacts.repo.path }}'
-        command: [sh]
+        command: ["/bin/sh", "-c"]
         source: |
-          git clone https://github.com/{{ inputs.parameters.GITHUB_REPO }} /workspace/repo
+          git clone --depth=1 https://{{ inputs.parameters.USER }}:{{ inputs.parameters.GIT_TOKEN_SECRET.key }}@github.com/{{ inputs.parameters.GITHUB_REPO }} /workspace/repo
           cd /workspace/repo
           sed -i "s/image:.*\$/image: your-container-image:{{ inputs.parameters.IMAGE_TAG }}/" {{ inputs.parameters.MANIFEST_PATH }}
           git config user.name {{ inputs.parameters.USER }}
           git config user.email {{ inputs.parameters.EMAIL }}
-          git remote set-url origin https://{{ inputs.parameters.GIT_TOKEN_SECRET.key }}@github.com/{{ inputs.parameters.GITHUB_REPO }}
           git add .
           git commit -m "Update container image tag to {{ inputs.parameters.IMAGE_TAG }}"
           git push -u origin master
