--- a/update-image.yaml
+++ b/update-image.yaml
@@ -32,7 +32,8 @@ spec:
         source: |
           git clone https://github.com/{{ inputs.parameters.GITHUB_REPO }}  /workspace/repo
           cd /workspace/repo
-          sed -i "s/image:.*\$/image: your-container-image:{{ inputs.parameters.IMAGE_TAG }}/" {{ inputs.parameters.MANIFEST_PATH }}
+          sed -i "s/image:.*\$/image: mashabrauer:{{ inputs.parameters.IMAGE_TAG }}/" {{ inputs.parameters.MANIFEST_PATH }}
+          cat {{ inputs.parameters.MANIFEST_PATH }}
           git config user.name {{ inputs.parameters.USER }}
           git config user.email {{ inputs.parameters.EMAIL }}
           git add .
