Added/Modified argo-hub.ci-simple.0.0.1.workflow-template.yaml

--- a/argo-hub.ci-simple.0.0.1.workflow-template.yaml
+++ b/argo-hub.ci-simple.0.0.1.workflow-template.yaml
@@ -115,3 +115,5 @@ spec:
                   value: '{{ inputs.parameters.USER }}'
                 - name: EMAIL
                   value: '{{ inputs.parameters.EMAIL }}'
+                - name: IMAGE_NAME
+                  value: '{{ inputs.parameters.IMAGE_NAME }}'
