--- a/update-image.yaml
+++ b/update-image.yaml
@@ -34,6 +34,8 @@ spec:
           ls
           sed -i "s#image:.*#image: {{ inputs.parameters.IMAGE_NAME }}:{{ inputs.parameters.IMAGE_TAG }}#g" {{ inputs.parameters.MANIFEST_PATH }}
           cat {{ inputs.parameters.MANIFEST_PATH }}
+          git config user.name {{ inputs.parameters.USER }}
+          git config user.email {{ inputs.parameters.EMAIL }}
           git add .
           git commit -m "Update container image tag to {{ inputs.parameters.IMAGE_TAG }}"
           git push -u origin master
