--- a/update-image.yaml
+++ b/update-image.yaml
@@ -38,4 +38,4 @@ spec:
           git config user.email {{ inputs.parameters.EMAIL }}
           git add .
           git commit -m "Update container image tag to {{ inputs.parameters.IMAGE_TAG }}"
-          git push -u origin master
+          git push origin master
