--- a/update-image.yaml
+++ b/update-image.yaml
@@ -38,5 +38,5 @@ spec:
           git config user.email {{ inputs.parameters.EMAIL }}
           git add .
           git commit -m "Update container image tag to {{ inputs.parameters.IMAGE_TAG }}"
-          git remote set-url origin git@github.com:{{ inputs.parameters.GITHUB_REPO }}.git
+          git remote set-url origin {{ inputs.parameters.REPO}}
           git push origin master
