--- a/update-image.yaml
+++ b/update-image.yaml
@@ -31,14 +31,10 @@ spec:
         workingDir: '{{ inputs.artifacts.repo.path }}'
         command: ["sh"]
         source: |
-          cd git
-          ls
-          cd ..
           sed -i "s#image:.*#image: {{ inputs.parameters.IMAGE_NAME }}:{{ inputs.parameters.IMAGE_TAG }}#g" {{ inputs.parameters.MANIFEST_PATH }}
           cat {{ inputs.parameters.MANIFEST_PATH }}
           git config user.name {{ inputs.parameters.USER }}
           git config user.email {{ inputs.parameters.EMAIL }}
           git add .
           git commit -m "Update container image tag to {{ inputs.parameters.IMAGE_TAG }}"
-          git remote set-url origin {{ inputs.parameters.REPO}}
-          git push origin master
+          git push 
