Added/Modified update-image.yaml

--- a/update-image.yaml
+++ b/update-image.yaml
@@ -37,4 +37,4 @@ spec:
           git config user.email {{ inputs.parameters.EMAIL }}
           git add .
           git commit -m "Update container image tag to {{ inputs.parameters.IMAGE_TAG }}"
-          git push 
+          git push origin HEAD:master
