--- a/update-image.yaml
+++ b/update-image.yaml
@@ -37,5 +37,5 @@ spec:
           git config user.email {{ inputs.parameters.EMAIL }}
           git add .
           git commit -m "Update container image tag to {{ inputs.parameters.IMAGE_TAG }}"
-          git remote show origin
+          git config --get remote.origin.url
           git push master
