--- a/update-image.yaml
+++ b/update-image.yaml
@@ -38,4 +38,4 @@ spec:
           git add .
           git commit -m "Update container image tag to {{ inputs.parameters.IMAGE_TAG }}"
           git config --get remote.origin.url
-          git push master
+          git push master HEAD:master
